# bigmc

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  update-web.sh
bigmc/: .gitignore  Makefile.am  README  configure.ac  update-web.sh
bigmc/conf/: bigmc.conf
bigmc/doc/: Makefile.am  bigmc.1
bigmc/doc/examples/: ccs.bgm  ccs2.bgm  diverge.bgm  diverge_prop.bgm  foo2.bgm  hole.bgm  link.bgm  match.bgm  prop.bgm  unordered_subtree.bgm  wide.bgm  wide2.bgm
bigmc/doc/graphs/: ccs.dot  diverge.dot  foo.dot  match.dot  terminal.dot
bigmc/doc/manual/: bigmc.texi
bigmc/doc/theory/match/: match.sml
bigmc/doc/website/: index.html
bigmc/include/: bigmc.h  bigraph.h  driver.h  edge.h  globals.h  graph.h  match.h  matcher.h  mc.h  node.h  parsenode.h  parser.h  predicate.h  query.h  reactionrule.h  report.h  subtree.h  term.h
bigmc/lib/peg-0.1.4/: compile.c  leg  leg.c  peg  peg.peg-c
bigmc/lib/peg-0.1.4/examples/accept.dSYM/Contents/: Info.plist
bigmc/lib/peg-0.1.4/examples/accept.dSYM/Contents/Resources/DWARF/: accept
bigmc/lib/peg-0.1.4/examples/basic.dSYM/Contents/Resources/DWARF/: basic
bigmc/lib/peg-0.1.4/examples/calc.dSYM/Contents/Resources/DWARF/: calc
bigmc/lib/peg-0.1.4/examples/dc.dSYM/Contents/: Info.plist
bigmc/lib/peg-0.1.4/examples/dc.dSYM/Contents/Resources/DWARF/: dc
bigmc/lib/peg-0.1.4/examples/dcv.dSYM/Contents/: Info.plist
bigmc/lib/peg-0.1.4/examples/dcv.dSYM/Contents/Resources/DWARF/: dcv
bigmc/lib/peg-0.1.4/examples/rule.dSYM/Contents/: Info.plist
bigmc/lib/peg-0.1.4/examples/rule.dSYM/Contents/Resources/DWARF/: rule
bigmc/lib/peg-0.1.4/examples/test.dSYM/Contents/Resources/DWARF/: test
bigmc/lib/peg-0.1.4/examples/wc.dSYM/Contents/: Info.plist
bigmc/lib/peg-0.1.4/examples/wc.dSYM/Contents/Resources/DWARF/: wc
bigmc/platform/MacOS/BigMC.pmdoc/: 01bigmc-contents.xml  01bigmc.xml  index.xml
bigmc/src/: Makefile  Makefile.am  bgparser.ypp  bgscanner.ll  bigraph.cpp  driver.cpp  edge.cpp  graph.cpp  hole.cpp  main.cpp  match.cpp  matcher.cpp  mc.cpp  node.cpp  parsenode.cpp  parser.cpp  predicate.cpp  query.cpp  reactionrule.cpp  report.cpp  subtree.cpp  term.cpp
bigmc/src/parser/: Makefile  bg.leg  bgparser.ypp  bgscanner.l  parser.cpp
bigmc/src/predicates/: Makefile  Makefile.am  pred_empty.cpp  pred_equal.cpp  pred_matches.cpp  pred_size.cpp  pred_terminal_contains.cpp
bigmc/src/terms/: hole.cpp  parallel.cpp  prefix.cpp  regions.cpp
conf/: bigmc.conf
display/: birch.html  birch.js
doc/: Makefile.am
doc/examples/: addition.bgm  airport.bgm  airport2.bgm  ccs2.bgm  clone.bgm  dining.bgm  dining_mutex.bgm  dining_nil.bgm  foo.bgm  foo3.bgm  hole2.bgm  match.bgm  matches.bgm  nil.bgm  notify.bgm  par.bgm  par2.bgm  par3.bgm  par4.bgm  prop.bgm  subtree.bgm  terminal.bgm  unary.bgm  wide.bgm  wide3.bgm
doc/manual/: bigmc.texi  ccslts.eps  ccslts.txt  format_manual.sh
doc/theory/: subtree.sml
doc/theory/match/: bam.txt
doc/website/: footer.php  header.php  index.html  index.php
doc/website/manual/: footer.php  header.php  index.php
include/: analyser.h  bigmc.h  bigraph.h  calculation.h  globals.h  match.h  matcher.h  mc.h  parsenode.h  parser.h  predicate.h  query.h  reactionrule.h  report.h  subtree.h  term.h  wingetopt.h
m4/: ax_pthread.m4
platform/MacOS/: Makefile  version.sh
platform/MacOS/BigMC.pmdoc/: 01usr-contents.xml  01usr.xml.template  index.xml
platform/Win32/: Basic.nsi
src/: Makefile.am  analyser.cpp  bgparser.ypp  bgscanner.ll  bigraph.cpp  calculation.cpp  driver.cpp  globals.cpp  graph.cpp  main.cpp  match.cpp  matcher.cpp  mc.cpp  node.cpp  parsenode.cpp  parser.cpp  predicate.cpp  query.cpp  reactionrule.cpp  report.cpp  subtree.cpp  term.cpp  wingetopt.c
src/parser/: .gitignore  bg.leg
src/predicates/: Makefile.am  pred_empty.cpp  pred_equal.cpp  pred_matches.cpp  pred_size.cpp  pred_terminal.cpp  pred_terminal_contains.cpp
src/terms/: hole.cpp  nil.cpp  num.cpp  parallel.cpp  prefix.cpp  regions.cpp
tests/: Makefile.am  test-bigraph.cpp  test-matcher.cpp
