bgdocdir = @prefix@/doc
exampledir = @prefix@/doc/examples
theorydir = @prefix@/doc/theory

example_DATA = \
examples/ccs.bgm \
examples/ccs2.bgm \
examples/diverge.bgm \
examples/diverge_prop.bgm \
examples/foo.bgm \
examples/foo2.bgm \
examples/foo3.bgm \
examples/hole.bgm \
examples/hole2.bgm \
examples/match.bgm \
examples/nil.bgm \
examples/par.bgm \
examples/par2.bgm \
examples/par3.bgm \
examples/par4.bgm \
examples/prop.bgm \
examples/subtree.bgm \
examples/terminal.bgm \
examples/unordered_subtree.bgm \
examples/wide.bgm \
examples/wide2.bgm \
examples/wide3.bgm \
examples/notify.bgm \
examples/airport.bgm \
examples/airport2.bgm \
examples/dining.bgm \
examples/dining_nil.bgm \
examples/dining_mutex.bgm \
examples/unary.bgm \
examples/link.bgm

theory_DATA = theory/match/match.sml 

EXTRA_DIST = \
examples/ccs.bgm \
examples/ccs2.bgm \
examples/diverge.bgm \
examples/diverge_prop.bgm \
examples/foo.bgm \
examples/foo2.bgm \
examples/foo3.bgm \
examples/hole.bgm \
examples/hole2.bgm \
examples/match.bgm \
examples/nil.bgm \
examples/par.bgm \
examples/par2.bgm \
examples/par3.bgm \
examples/par4.bgm \
examples/unary.bgm \
examples/prop.bgm \
examples/subtree.bgm \
examples/terminal.bgm \
examples/unordered_subtree.bgm \
examples/wide.bgm \
examples/wide2.bgm \
examples/wide3.bgm \
examples/notify.bgm \
examples/airport.bgm \
examples/airport2.bgm \
examples/link.bgm \
examples/dining.bgm \
examples/dining_nil.bgm \
examples/dining_mutex.bgm \
theory/match/match.sml

dist_man_MANS = bigmc.1 

info_TEXINFOS = manual/bigmc.texi
AM_MAKEINFOHTMLFLAGS =  
