bgdocdir = @prefix@/doc

bgdoc_DATA = \
	examples/ccs.bgm \
	examples/diverge.bgm \
	examples/hole.bgm \
	examples/match.bgm \
	examples/nil.bgm \
	examples/par.bgm \
	examples/par2.bgm \
	examples/prop.bgm \
	examples/terminal.bgm \
	theory/match/match.sml 

bgdoc_DIST = \
	examples/ccs.bgm \
	examples/diverge.bgm \
	examples/hole.bgm \
	examples/match.bgm \
	examples/nil.bgm \
	examples/par.bgm \
	examples/par2.bgm \
	examples/prop.bgm \
	examples/terminal.bgm \
	theory/match/match.sml 
