bgdocdir = @prefix@/doc
exampledir = @prefix@/doc/example
theorydir = @prefix@/doc/theory

example_DATA = \
	examples/ccs.bgm \
	examples/diverge.bgm \
	examples/hole.bgm \
	examples/match.bgm \
	examples/nil.bgm \
	examples/par.bgm \
	examples/par2.bgm \
	examples/prop.bgm \
	examples/terminal.bgm \
	examples/diverge_prop.bgm

theory_DATA = theory/match/match.sml 

example_DIST = \
	examples/ccs.bgm \
	examples/diverge.bgm \
	examples/hole.bgm \
	examples/match.bgm \
	examples/nil.bgm \
	examples/par.bgm \
	examples/par2.bgm \
	examples/prop.bgm \
	examples/terminal.bgm

theory_DIST =
	theory/match/match.sml

dist_man_MANS = bigmc.1 

info_TEXINFOS = manual/bigmc.texi

