lib_LTLIBRARIES = pred_empty.la pred_equal.la pred_terminal_contains.la pred_size.la \
	pred_matches.la

includes = ../../includes

pred_empty_la_SOURCES = pred_empty.cpp
pred_empty_la_LDFLAGS = -module
pred_empty_la_CPPFLAGS = -I../../include

pred_equal_la_SOURCES = pred_equal.cpp
pred_equal_la_LDFLAGS = -module
pred_equal_la_CPPFLAGS = -I../../include

pred_terminal_contains_la_SOURCES = pred_terminal_contains.cpp
pred_terminal_contains_la_LDFLAGS = -module
pred_terminal_contains_la_CPPFLAGS = -I../../include

pred_size_la_SOURCES = pred_size.cpp
pred_size_la_LDFLAGS = -module
pred_size_la_CPPFLAGS = -I../../include

pred_matches_la_SOURCES = pred_matches.cpp
pred_matches_la_LDFLAGS = -module
pred_matches_la_CPPFLAGS = -I../../include



