lib_LTLIBRARIES = pred_empty.la pred_equal.la pred_terminal_contains.la

includes = ../../includes

pred_empty_la_SOURCES = pred_empty.cpp $(includedir)/bigmc.h $(includedir)/bigraph.h $(includedir)/node.h
pred_empty_la_LDFLAGS = -module
pred_empty_la_CPPFLAGS = -I../../include

pred_equal_la_SOURCES = pred_equal.cpp
pred_equal_la_LDFLAGS = -module
pred_equal_la_CPPFLAGS = -I../../include

pred_terminal_contains_la_SOURCES = pred_terminal_contains.cpp
pred_terminal_contains_la_LDFLAGS = -module
pred_terminal_contains_la_CPPFLAGS = -I../../include

